# Menue_Master_GUI

./: README.md
MenuMaster_NiceGUI_Project_11.05.26/MenuMaster_NiceGUI_Project/: README.md  requirements.txt
MenuMaster_NiceGUI_Project_11.05.26/MenuMaster_NiceGUI_Project/menue_master/: __init__.py  (+1 more)
MenuMaster_NiceGUI_Project_11.05.26_v1.1/MenuMaster_NiceGUI_Project/: LICENSE  README.md
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/: README.md  menue_master.db  pyproject.toml  pytest.ini  requirements.txt
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/docs/architecture-diagrams/: er_modell.md  klassendiagramm.md  schichten.md
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/menue_master/: application.py
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/menue_master/data_access/: datenbank.py  datenbank_zugriff.py  orm_modelle.py  seed.py
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/menue_master/domain/: __init__.py  modelle.py
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/menue_master/services/: __init__.py  einkaufsliste_service.py  rezept_service.py  validierung.py  wochenplan_service.py
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/menue_master/ui/: controllers.py  pages.py
MenuMaster_NiceGUI_Project_final_coaching/MenuMaster_NiceGUI_Project/tests/: test_datenbank_und_integration.py  test_domain_und_services.py
MenuMaster_OOP_Abgabeversion/MenuMaster_OOP/: README.md  main.py  requirements.txt
(+40 files in other folders)
