[project]
name = "menue-master-nicegui"
version = "0.1.0"
description = "NiceGUI meal planning app using OOP, SQLAlchemy ORM, SQLite and layered architecture."
requires-python = ">=3.10"

dependencies = [
    "nicegui>=2.0",
    "SQLAlchemy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
